[package]
name = "robco_term"
version = "0.1.0"
authors = ["Andy Russell <arussell123@gmail.com>"]
license = "MIT"

[dependencies]
docopt = "0.6.*"
itertools = "0.3.23"
log = "0.3.1"
log4rs = "0.3.3"
ncurses = { git = "https://github.com/jeaye/ncurses-rs" }
rand = "0.3"
rustc-serialize ="0.3"
time = "0.1"
